add additional info

--- a/Playing_with_data.ipynb
+++ b/Playing_with_data.ipynb
@@ -666,11 +666,70 @@
    "source": [
     "# Conclusion: The two plots above solve my issue quite well, I would say."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72c2ec92-fba0-4ed0-9846-8daee201b0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc15bacd-a084-4fb6-bb48-a992ad77476e",
+   "metadata": {},
+   "source": [
+    "Additional explaination from Quora, https://www.quora.com/How-do-computer-chips-get-faster\n",
+    "\n",
+    "\n",
+    "Why has computer chip speed not continued to increase?\n",
+    "They have, in that they have got more powerful.\n",
+    "\n",
+    "What hasn’t increased is clock frequency.\n",
+    "\n",
+    "The problem is power, and in particular, heat dissipation.\n",
+    "\n",
+    "You see, Moore’s Law predicted that, every two years (or 1.5 years, or year, depending on which version you choose), the density of transistors on a chip would double. It has held remarkably accurately for decades.\n",
+    "\n",
+    "As a nice side-effect, every time transistors got smaller, they also got faster. This allowed us to take a circuit from two years ago, shrink it down to half the size, and it would magically run faster. Woohoo!\n",
+    "\n",
+    "In the late 1990s, though, we started to run into problems.\n",
+    "\n",
+    "Unfortunately, whilst these smaller, faster transistors used less power, the reduction wasn’t as significant as the reduction in area. Therefore, the amount of power used per unit area of silicon started to increase.\n",
+    "\n",
+    "Each time you switch a transistor (from off to on, or vice-versa), it uses a certain amount of energy to do the switch. This effectively ends up being dissipated as heat. The more frequently you make it switch (the higher the clock speed), the more heat it will dissipate.\n",
+    "\n",
+    "In addition, as the transistors got smaller, they started to leak. Those “on-off switches” were no longer properly “off”. This increased the amount of power consumed (and therefore heat generated) further.\n",
+    "\n",
+    "\n",
+    "For a while, we were able to use clever design to mitigate the problems - for example, clock gating turns off the clock to bits of the chip that are not being used, so that they generate less heat. Unfortunately, that only got us so far.\n",
+    "\n",
+    "Basically, we can make chips nowadays with much higher clock speeds. However, we can’t actually use them, because they’ll overheat. Some chips have been run at 8 GHz or more, but that’s been done by immersing them in liquid nitrogen.\n",
+    "\n",
+    "**So, instead of switching the transistors faster, we add in more transistors instead, so that the CPU is able to do more work each clock cycle, rather than making the clock cycle shorter. Multi-core CPUs are now the norm (two cores instead of one running at twice the speed); multi-execution pipelines, and extremely rich instruction sets to provide hardware to accelerate common functions.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2be17153-3ea5-439c-bce5-f22ff315f135",
+   "metadata": {},
+   "source": [
+    "Additional 2: Apple Silicon is specialized for Apple products, instead of using the more generalized Intel chips. https://en.wikipedia.org/wiki/Apple_silicon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2bdab1e-2ece-49b1-bba2-a0971bf00680",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
